# near-sffl

./: .env  .gitignore  .gitmodules  Cargo.toml
executor/: Cargo.toml
executor/src/: config.rs  executor.rs  main.rs  types.rs
workers/: Cargo.toml
workers/abi/: EndpointV2View.json
workers/src/: abi.rs  config.rs  data.rs  executor_def.rs  lib.rs
workers/src/chain/: connections.rs  contracts.rs
