[package]
name = "executor"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
alloy = { version = "0.4.2", features = ["full"] }
alloy-sol-types = "0.8.5"
futures = "0.3.30"
eyre = "0.6.12"
num256 = "0.5.2"
rand = "0.9.0-alpha.2"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.4.0", features = ["full"] }
